# wasmiter

./: .gitignore  Cargo.toml  README.md  justfile
.config/: nextest.toml
benches/: bytes.rs  leb128.rs  wat_printing.rs
crates/wasmiter-dis/: Cargo.toml
crates/wasmiter-dis/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: leb128_s32.rs  leb128_s64.rs  leb128_u32.rs  parser_random.rs  parser_valid.rs  wat_valid.rs
fuzz/src/: lib.rs  wasm.rs
profiling/: .gitignore  Cargo.toml  justfile
profiling/crates/diswasm/: Cargo.toml
profiling/crates/hello_wasi/: Cargo.toml
profiling/crates/the_monster/: Cargo.toml
profiling/crates/the_monster/src/: lib.rs
src/: allocator.rs  buffer.rs  bytes.rs  component.rs  custom.rs  index.rs  input.rs  instruction_set.rs  int.rs  lib.rs  mmap.rs  parser.rs  sections.rs  types.rs  wat.rs
src/allocator/: own_or_ref.rs  string_pool.rs
src/buffer/: arena.rs  buffer_vec.rs  global_arena.rs
src/bytes/: buf_bytes.rs  bytes_debug.rs  bytes_slice.rs  debug_bytes.rs  error.rs  mmap_bytes.rs  reader.rs  shared_bytes.rs  window.rs
src/component/: code_section.rs  datas_component.rs  elems_component.rs  exports_component.rs  funcs_component.rs  function_section.rs  globals_component.rs  imports_component.rs  index.rs  index_order.rs  index_vector.rs  known_section.rs  limits.rs  locals.rs  mems_component.rs  result_type.rs  tables_component.rs  tags_component.rs  type_parser.rs  types.rs  types_component.rs  wat.rs
src/component/types/: block_type.rs  func_type.rs  global_type.rs  table_type.rs
src/compontent/: types.rs
src/custom/: custom_section.rs  name.rs
src/custom/name/: indirect_name_map.rs  name_assoc.rs  name_map.rs
src/input/: borrowed.rs  convert.rs  error.rs  hex_dump.rs  input_impls.rs  window.rs
src/instruction_set/: instruction.rs  instruction_sequence.rs  is_constant.rs  memarg.rs  opcode.rs  prefix_fc.rs  prefixed_opcode.rs  vector_opcode.rs
src/parser/: ascending_order.rs  decoder.rs  error.rs  input.rs  leb128.rs  mixed_error.rs  name.rs  offset.rs  result_ext.rs  simple_parse.rs  vector.rs
src/parser/input/: buf_bytes.rs  cursor.rs  error.rs  reader.rs  shared_bytes.rs  window.rs
src/parser/leb128/: default.rs  simple.rs
src/parser/name/: char_iterators.rs  error.rs  name_fmt.rs
src/sections/: debug_module.rs  display_module.rs  id.rs  section_kind.rs
src/types/: block_type.rs  global_type.rs  limits.rs  table_type.rs
src/wat/: datas_text.rs  display_impls.rs  elems_text.rs  exports_text.rs  funcs_text.rs  globals_text.rs  imports_text.rs  instruction_text.rs  mems_text.rs  module_text.rs  tables_text.rs  tags_text.rs  types_text.rs  writer.rs
tests/: input.rs  leb128.rs  modules.rs  names.rs  sections.rs  type_section.rs
tests/modules/: all_the_things.wat  exception_handling.wat  lots_of_br_table.wat  name_custom_section.wat
tests/snapshots/: input__hex_dump_debug.snap  input__hex_dump_display.snap  input__hex_dump_display_at_weird_offset.snap  modules__all_the_things.snap  modules__basic_module.snap  modules__exception_handling.snap  modules__lots_of_br_table.snap  modules__name_custom_section.snap  names__simple_names.snap  sections__export_section.snap  sections__import_section.snap  sections__type_section.snap  type_section__basic_type.snap
