[package]
name = "wasmiter"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
readme = "README.md"
repository = "https://github.com/davnavr/wasmiter"

[dependencies]
cfg-if = "1.0.0"
memmap2 = { version = "0.6.2", optional = true }

[features]
default = ["backtrace", "std", "mmap"]
mmap = ["std", "dep:memmap2"]
backtrace = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
criterion = "0.5.1"
insta = "1.29.0"
leb128 = "0.2.5"
wat = "1.0.64"

[[bench]]
name = "leb128"
harness = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
