[package]
name = "wasmiter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[workspace]
members = ["crates/wasmiter-dis"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
readme = "README.md"
repository = "https://github.com/davnavr/wasmiter"

[workspace.dependencies]
cfg-if = "1.0.0"

[dependencies]
cfg-if = { workspace = true }
memmap2 = { version = "0.6.2", optional = true }

[features]
default = ["backtrace", "std", "mmap"]
mmap = ["std", "dep:memmap2"]
backtrace = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
criterion = "0.5.1"
insta = "1.29.0"
leb128 = "0.2.5"
wat = "1.0.64"

[[bench]]
name = "leb128"
harness = false

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = 2

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
