[package]
name = "wasmiter"
description = "Low-level zero-allocation WebAssembly parser usable in a no_std environment."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
members = ["crates/wasmiter-dis"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
readme = "README.md"
repository = "https://github.com/davnavr/wasmiter"

[workspace.dependencies]
cfg-if = "1.0.0"

[dependencies]
cfg-if = { workspace = true }
memmap2 = { version = "0.6.2", optional = true }

[features]
default = ["backtrace", "std", "mmap"]
mmap = ["std", "dep:memmap2"]
backtrace = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
arbitrary = "1.3.0"
criterion = { version = "0.5.1", features = ["real_blackbox"]}
insta = "1.29.0"
leb128 = "0.2.5"
rand = "0.8.5"
wasm-smith = "0.12.10"
wasmprinter = "0.2.59"
wat = "1.0.64"

[[bench]]
name = "leb128"
harness = false

[[bench]]
name = "wat_printing"
harness = false

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = 2

[profile.disassembly]
inherits = "release"
codegen-units = 16
lto = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
