[package]
name = "wasmiter-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.6"
wasm-smith = "0.12.10"

[dependencies.wasmiter]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parser_valid"
path = "fuzz_targets/parser_valid.rs"
test = false
doc = false
